welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: type mismatch;
 found   : Int(80)
 required: Boolean
  }else(61<=speed<=80){
                   ^