welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  if (speed<=60){
    return 0
  }else(61<=speed<=80){
    return 1
  }
}